Topic names in PAP should be configurable from application.yaml
- for using Kafka instead of dmaap, topics names need to be lowercase
- fix for unit/integration tests using default names and changed names
for topics and group
- fix for sonar lints found along the way

Issue-ID: POLICY-4455
Change-Id: I89e9e6f7dbb07462f1ae497755965cb5a3f223a3
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>